[package]
name = "pddllib"
version = "0.1.21"
edition = "2021"
authors = ["Jan M. D. Hansen"]
license-file = "LICENSE"
repository = "https://github.com/jamadaha/pddllib"
description = "A PDDL library for lifted successor generation"

[dependencies]
indexmap = "2.2.6"
itertools = "0.13.0"
pddlp = { version = "0.1.6", optional = true }
thiserror = "1.0.61"

[dev-dependencies]
pathfinding = "4.9.1"
criterion = "0.5.1"

[features]
default = ["translation"]
translation = ["dep:pddlp"]

[[bench]]
name = "bench_main"
harness = false
