[package]
name = "pddllib"
version = "0.2.0"
edition = "2021"
authors = ["Jan M. D. Hansen"]
license-file = "LICENSE"
repository = "https://github.com/jamadaha/pddllib"
description = "A PDDL library for lifted successor generation"

[dependencies]
indexmap = "2.2.6"
itertools = "0.13.0"
pddlp = { version = "0.1.7", optional = true }
thiserror = "1.0.61"

[features]
default = ["translate"]
translate = ["dep:pddlp"]
